--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
-headless_chrome = "1.0.18"
+chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
 thiserror = "2.0.17"
+tokio = "1.48.0"
