--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.89"
 chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
+futures = "0.3.31"
 thiserror = "2.0.17"
 tokio = "1.48.0"
