--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
+base64 = "0.22.1"
 chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
 fastpool = "1.0.2"
 futures = "0.3.31"
