--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0.145"
 thiserror = "2.0.17"
 tokio = "1.48.0"
 uuid = {version="1.19.0", features=["v4"]}
+
+[dev-dependencies]
+httpmock = "0.8.2"
