--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.89"
 base64 = "0.22.1"
+bytes = "1.11.0"
 chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
 fastpool = "1.0.2"
 futures = "0.3.31"
-reqwest = "0.12.28"
+futures-util = "0.3.31"
+reqwest = { version = "0.12.28", features = ["rustls-tls", "stream"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
-tokio = "1.48.0"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
 uuid = {version="1.19.0", features=["v4"]}
 
 [dev-dependencies]
