--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.12.28", features = ["rustls-tls", "stream"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
+tokio-util = "0.7.17"
 uuid = {version="1.19.0", features=["v4"]}
 
 [dev-dependencies]
