--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ fastpool = "1.0.2"
 futures = "0.3.31"
 futures-util = "0.3.31"
 reqwest = { version = "0.12.28", features = ["rustls-tls", "stream"] }
+robotxt = "0.6.1"
 serde_json = "1.0.145"
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
