--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = "0.1.89"
 base64 = "0.22.1"
 bytes = "1.11.0"
 chromiumoxide = { version = "0.8.0", features = ["_fetcher-rustls-tokio"] }
+fastbloom = "0.14.1"
 fastpool = "1.0.2"
 futures = "0.3.31"
 futures-util = "0.3.31"
