--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io
 tokio-util = "0.7.17"
 url = "2.5.8"
 uuid = {version="1.19.0", features=["v4"]}
+sqlx  = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
+src = "0.0.6"
 
 [dev-dependencies]
 httpmock = "0.8.2"
