--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ uuid = {version="1.19.0", features=["v4"]}
 sqlx  = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 src = "0.0.6"
 redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
+cdrs-tokio = "9.0.0"
 
 [dev-dependencies]
 httpmock = "0.8.2"
