--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ sqlx  = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 src = "0.0.6"
 redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
 cdrs-tokio = "9.0.0"
+chrono = "0.4.43"
 
 [dev-dependencies]
 httpmock = "0.8.2"
