--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,10 @@ cdrs-tokio = "9.0.0"
 chrono = "0.4.43"
 xxhrs = "2.0.1"
 psl = "2.1.183"
-simhash = "0.2.0"
+minhash-rs = "0.2.0"
 
 [dev-dependencies]
 httpmock = "0.8.2"
+
+[patch.crates-io]
+minhash-rs = { path = "vendor/minhash-rs" }
